Changed natbib to biblatex

--- a/usb-book/bibliografia.bib
+++ b/usb-book/bibliografia.bib
@@ -1,4 +1,4 @@
-@inproceedings{article:mixfix,
+@inproceedings{parsing-mixfix-operators,
   author = {Nils Anders Danielsson and Ulf Norell},
   title = {Parsing mixfix operators},
   booktitle = {Implementation and Application of Functional Languages},
@@ -8,10 +8,19 @@
   pages = {80-99}
 }
 
-@misc{software:megaparsec,
+@software{megaparsec,
   author = {Mark Karpov},
   title = {Megaparsec},
   version = {4.3},
   year = {2016},
-  url = {https://hackage.haskell.org/package/megaparsec}
+  url = {https://hackage.haskell.org/package/megaparsec},
+  howpublised = {\url{https://hackage.haskell.org/package/megaparsec}}
+}
+
+@online{scrap-type-classes,
+    author = {Gabriel Gonzalez},
+    title = {Scrap your type classes},
+    year = {2012},
+    url = {http://www.haskellforall.com/2012/05/scrap-your-type-classes.html},
+    urldate = {2016-02-04}
 }
