--- a/usb-book/partes/apendiceA.tex
+++ b/usb-book/partes/apendiceA.tex
@@ -1,6 +1,8 @@
-\chapter{@nombreApendice}
+\def\chapterTitle{@nombreApendice\xspace}
+
+\chapter{\chapterTitle}
 \label{apendiceA}
-\lhead{Apéndice A. \emph{@nombreApendice}}
+\lhead{Apéndice A. \emph{\chapterTitle}}
 
 % En los apéndices se incluye cualquier información que no sea esencial para la
 % comprensión básica del trabajo, pero provea ejemplos y casos de estudio
