--- a/usb-book/partes/apendiceB.tex
+++ b/usb-book/partes/apendiceB.tex
@@ -1,5 +1,7 @@
-\chapter{@nombreApendice}
+\def\chapterTitle{@nombreApendice\xspace}
+
+\chapter{\chapterTitle}
 \label{apendiceB}
-\lhead{Apéndice B. \emph{@nombreApendice}}
+\lhead{Apéndice B. \emph{\chapterTitle}}
 
 \Blindtext
