--- a/usb-book/partes/introduccion.tex
+++ b/usb-book/partes/introduccion.tex
@@ -9,9 +9,9 @@
 % Trabajos anteriores
 \blindtext
 
-En \cite{article:mixfix} se presenta un trabajo que \ldots
+En \textcite{parsing-mixfix-operators} se presenta un trabajo que \ldots
 
-% \citeauthor{article:mixfix} es otro autor que \ldots
+\citeauthor{parsing-mixfix-operators} es otro autor que \ldots
 
 % Objetivo general
 \blindtext
