Added a haskellcode environtment

--- a/usb-book/tesis.tex
+++ b/usb-book/tesis.tex
@@ -116,37 +116,50 @@
 
 \newcommand{\inlinemath}[1]{{\small\bfseries\color{cyan process}\texttt{$#1$}}}
 \newcommand{\inlinecode}[1]{{\small\bfseries\color{darkcandyapplered}\texttt{#1}}}
+\lstdefinestyle{code}{
+    keywordstyle={\color{cerulean}\bfseries},   % style for keywords: bold
+    keywordstyle={[2]\bfseries},
+    commentstyle={\color{gray}},        % style for comments
+    captionpos=t,                       % caption position: top
+    frame=lt,                           % frame: left and top
+    frameround=ffff,                    % roundness: TR, BR, BL, TL
+    framerule=0.75pt,                   % thickness of the frame
+    framesep=0.5cm,                     % separation from frame to code
+    rulecolor=\color{gray},
+    columns=flexible,                   % flexible character width
+    keepspaces=true,                    % keep all spaces
+    % margins
+    aboveskip=1cm, xleftmargin=1.25cm, xrightmargin=1.25cm,
+    % listings does not support UTF-8
+    literate= {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
+              {Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
+              {à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
+              {À}{{\`A}}1 {È}{{\'E}}1 {Ì}{{\`I}}1 {Ò}{{\`O}}1 {Ù}{{\`U}}1
+              {ä}{{\"a}}1 {ë}{{\"e}}1 {ï}{{\"i}}1 {ö}{{\"o}}1 {ü}{{\"u}}1
+              {Ä}{{\"A}}1 {Ë}{{\"E}}1 {Ï}{{\"I}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
+              {â}{{\^a}}1 {ê}{{\^e}}1 {î}{{\^i}}1 {ô}{{\^o}}1 {û}{{\^u}}1
+              {Â}{{\^A}}1 {Ê}{{\^E}}1 {Î}{{\^I}}1 {Ô}{{\^O}}1 {Û}{{\^U}}1
+              {œ}{{\oe}}1 {Œ}{{\OE}}1 {æ}{{\ae}}1 {Æ}{{\AE}}1 {ß}{{\ss}}1
+              {ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
+              {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
+              {€}{{\EUR}}1 {£}{{\pounds}}1 {¿}{{\textquestiondown}}1
+              {¡}{{\textexclamdown}}1,
+}
+
 \lstnewenvironment{anglercode}[1][]{
     \linespread{1}
     \lstset{
         language=angler,
-        keywordstyle={\color{cerulean}\bfseries},   % style for keywords: bold
-        keywordstyle={[2]\bfseries},
-        commentstyle={\color{gray}},        % style for comments
-        captionpos=t,                       % caption position: top
-        frame=lt,                           % frame: left and top
-        frameround=ffff,                    % roundness: TR, BR, BL, TL
-        framerule=0.75pt,                   % thickness of the frame
-        framesep=0.5cm,                     % separation from frame to code
-        rulecolor=\color{gray},
-        columns=flexible,                   % flexible character width
-        keepspaces=true,                    % keep all spaces
-        % margins
-        aboveskip=1cm, xleftmargin=1.25cm, xrightmargin=1.25cm,
-        % listings does not support UTF-8
-        literate= {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
-                  {Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
-                  {à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
-                  {À}{{\`A}}1 {È}{{\'E}}1 {Ì}{{\`I}}1 {Ò}{{\`O}}1 {Ù}{{\`U}}1
-                  {ä}{{\"a}}1 {ë}{{\"e}}1 {ï}{{\"i}}1 {ö}{{\"o}}1 {ü}{{\"u}}1
-                  {Ä}{{\"A}}1 {Ë}{{\"E}}1 {Ï}{{\"I}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
-                  {â}{{\^a}}1 {ê}{{\^e}}1 {î}{{\^i}}1 {ô}{{\^o}}1 {û}{{\^u}}1
-                  {Â}{{\^A}}1 {Ê}{{\^E}}1 {Î}{{\^I}}1 {Ô}{{\^O}}1 {Û}{{\^U}}1
-                  {œ}{{\oe}}1 {Œ}{{\OE}}1 {æ}{{\ae}}1 {Æ}{{\AE}}1 {ß}{{\ss}}1
-                  {ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
-                  {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
-                  {€}{{\EUR}}1 {£}{{\pounds}}1 {¿}{{\textquestiondown}}1
-                  {¡}{{\textexclamdown}}1,
+        style=code,
+        #1                                  % settings for the lst environment
+    }
+}{}
+
+\lstnewenvironment{haskellcode}[1][]{
+    \linespread{1}
+    \lstset{
+        language=haskell,
+        style=code,
         #1                                  % settings for the lst environment
     }
 }{}
