* Changed the way we show code listings * Now we use the package enumitem instead of enumerate

--- a/usb-book/partes/capitulo1.tex
+++ b/usb-book/partes/capitulo1.tex
@@ -74,7 +74,7 @@ La Figura \ref{grafo} lo muestra.
 \label{grafo}
 \end{figure}
 
-\begin{enumerate}[--]
+\begin{enumerate}
 \item 1
 \item 2
 \item 3
