--- a/usb-book/tesis.tex
+++ b/usb-book/tesis.tex
@@ -8,7 +8,7 @@
 % Básicos
 \usepackage[backend=bibtex,style=alphabetic]{biblatex}
 \addbibresource{bibliografia.bib}
-\usepackage{enumerate}
+\usepackage{enumitem}
 \usepackage{csquotes}
 \usepackage{url}
 \usepackage{datetime}
@@ -65,6 +65,13 @@
 \renewcommand{\tablename}{Tabla}
 \newcommand\listsymbolname{Acrónimos y Símbolos}
 
+% item lists
+\renewcommand{\labelitemi}{$\bullet$}
+\renewcommand{\labelitemii}{$\textendash$}
+
+% compact itemize
+\setlist[itemize]{nosep}
+
 % Para colocar un margen a la izquierda
 \newmdenv[
         hidealllines=true,
@@ -91,6 +98,7 @@
 \definecolor{crimson}{rgb}{0.86, 0.08, 0.24}
 \definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
 
+% code and mathematics
 \lstdefinelanguage{angler}{
     % add these letters as possible parts of keywords
     alsoletter={:, \\, =, -, >, \_, ., (, ), \{, \}},
@@ -99,7 +107,7 @@
         export, import, as, open, reopen, closed, with,
         where, let, in,
         forall, exists, select,
-        behaviour, on, defines, is,
+        behaviour, on, defines, is, scope,
         operator, prefix, postfix, infixL, infixR, infixN
     },
     % symbol keywords
@@ -121,7 +129,7 @@
     keywordstyle={[2]\bfseries},
     commentstyle={\color{gray}},        % style for comments
     captionpos=t,                       % caption position: top
-    frame=lt,                           % frame: left and top
+    frame=l,                            % frame: [l]eft [r]ight [t]op [b]ottom
     frameround=ffff,                    % roundness: TR, BR, BL, TL
     framerule=0.75pt,                   % thickness of the frame
     framesep=0.5cm,                     % separation from frame to code
