--- a/usb-book/bibliografia.bib
+++ b/usb-book/bibliografia.bib
@@ -14,6 +14,7 @@
     version = {4.3},
     year = {2016},
     url = {https://hackage.haskell.org/package/megaparsec},
+    urldate = {2016-02-04},
     howpublised = {\url{https://hackage.haskell.org/package/megaparsec}}
 }
 
@@ -23,4 +24,14 @@
     year = {2012},
     url = {http://www.haskellforall.com/2012/05/scrap-your-type-classes.html},
     urldate = {2016-02-04}
+}
+
+@software{agda,
+    author = {Ulf Norell},
+    title = {Agda},
+    version = {2.4.2},
+    year = {2007},
+    url = {http://wiki.portal.chalmers.se/agda/pmwiki.php},
+    urldate = {2016-02-04},
+    howpublised = {\url{http://wiki.portal.chalmers.se/agda/pmwiki.php}}
 }
