Added the lexer implementation explanation with bibliography

--- a/usb-book/bibliografia.bib
+++ b/usb-book/bibliografia.bib
@@ -8,6 +8,26 @@
     pages = {80-99}
 }
 
+@software{python-parser,
+    author = {Bernard James Pope},
+    title = {language-python},
+    version = {0.5.2},
+    year = {2008},
+    url = {https://hackage.haskell.org/package/language-python},
+    urldate = {2016-02-05},
+    howpublised = {\url{https://hackage.haskell.org/package/language-python}}
+}
+
+@software{ghc,
+    author = {Kevin Hammond},
+    title = {GHC},
+    version = {7.10.2},
+    year = {1992},
+    url = {https://www.haskell.org/ghc/},
+    urldate = {2016-02-05},
+    howpublised = {\url{https://github.com/ghc/ghc}}
+}
+
 @software{megaparsec,
     author = {Mark Karpov},
     title = {Megaparsec},
